Fix registration layout bug

--- a/sass/modules/_user-edit.scss
+++ b/sass/modules/_user-edit.scss
@@ -5,10 +5,8 @@
   @extend %notice;
   @extend %simple-inline-form;
   @include at-breakpoint($break) {
-    @include bleed(space($simple-side,$simple-width), right);
+    @include bleed(space($simple-side,$simple-center));
     @include padding-leader(1);
-    margin-left: 0;
-    padding-left: 0;
     label { padding-left: rhythm(1); }
   }
 }
